<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tipos.PerfilUsuario">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/IconPerfilOtroid"
            android:layout_width="69dp"
            android:layout_height="70dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/icon_me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNombreUsuarioOtroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text=""
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/IconPerfilOtroid"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSeguidoresOtroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="104dp"
            android:text="@string/seguidoresYo"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNumeroSeguidoresOtroId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSeguidoresOtroid" />

        <TextView
            android:id="@+id/txtSeguidosOtroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="104dp"
            android:text="@string/seguidosYo"
            android:textStyle="bold"

            app:layout_constraintStart_toEndOf="@+id/txtSeguidoresOtroid"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNumeroSeguidosOtroId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:text="TextView"
            android:textAlignment="center"

            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSeguidosOtroid" />

        <TextView
            android:id="@+id/txtPublicacionesOtroId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="104dp"
            android:text="@string/publicaciones"
            android:textStyle="bold"

            app:layout_constraintStart_toEndOf="@+id/txtSeguidosOtroid"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNumeroPublicaiconesOtroId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="268dp"

            android:text="TextView"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPublicacionesOtroId" />

        <TextView
            android:id="@+id/txtDescripcionOtroId"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="172dp"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="@+id/txtDescripcionOtroId"
            tools:layout_editor_absoluteX="0dp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerOtroPerfil"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider4"
            tools:listitem="@layout/item_perfil"/>

        <Button
            android:id="@+id/btnseguirOtroUsuario"
            style="@style/boton"
            android:layout_width="72dp"
            android:layout_height="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="36dp"
            android:padding="0dp"
            android:text="@string/seguir"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>